--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div id="headermenu">
                 <ul>
                     <li><a href="/download/">Home</a></li>
-                    <li id="headmenusupper"><a href="/get/">
+                    <li id="headmenusupper"><a href="/download/get/">
                             Download Now
                         </a></li>
                     <li><a href="/download/blog/">Blog</a></li>
@@ -365,7 +365,7 @@
 
                         </div>
                         <div id="itemdwnld50r">
-                            <a href="/get/" id="itemdwnld50but">Install App</a>
+                            <a href="/download/get/" id="itemdwnld50but">Install App</a>
                         </div>
                     </div>
                 </div>
